# nickel-club

./: .flaskenv  .gitignore  Procfile  README.md  pyproject.toml  todo.md
migrations/versions/: 39b10ff88b45_add_deleted_field_to_clubmember.py  a204609d141c_initial_migration.py  b2af90f02e6c_remove_nickelrequesttype_use_negative_.py  c0662f6d9342_make_club_member_name_unique.py  e303696829e5_add_total_earnings_field_to_club_members.py
nickel_club/: __init__.py  about.py  admin.py  model.py  public.py
nickel_club/admin/: __init__.py
nickel_club/admin/templates/admin/: admin.html  index.html  login.html  members.html  nickel_requests.html  settings.html
nickel_club/public/: __init__.py
nickel_club/public/templates/public/: about.html  leaderboard.html  member.html
nickel_club/static/: about.md
nickel_club/templates/: base.html
nickel_club/templates/admin/: index.html  login.html
tests/: test_nickel_club.py
