[tool.poetry]
name = "nickel-club"
version = "0.1.0"
description = ""
authors = ["James Sully <sullyj3@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.2"
Flask = "^2.0.3"
click = "^8.0.4"
Flask-SQLAlchemy = "^2.5.1"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
